Add submodule and project for lwip

--- a/README
+++ b/README
@@ -1,1 +1,4 @@
 This repository contains code to use the lwip-framework (<http://www.sics.se/~adam/lwip/>) on a Luminary Micro/Texas Instrument Stellaris microcontroller without using an operating system.
+
+Folders:
+* lwip: the lwip stack
