--- a/README
+++ b/README
@@ -1,4 +1,5 @@
 This repository contains code to use the lwip-framework (<http://www.sics.se/~adam/lwip/>) on a Luminary Micro/Texas Instrument Stellaris microcontroller without using an operating system.
 
 Folders:
+* ipv6-udp-only driver and initialization to use UDP over IPv6
 * lwip: the lwip stack
